WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258331
[IFC] If white-space-collapse is preserve and text-wrap is not nowrap, the UA must hang this sequence
https://bugs.webkit.org/show_bug.cgi?id=258331
Summary
[IFC] If white-space-collapse is preserve and text-wrap is not nowrap, the UA...
alan
Reported
2023-06-20 17:47:28 PDT
https://www.w3.org/TR/css-text-4/#white-space-phase-2
Attachments
Patch
(6.61 KB, patch)
2023-06-20 17:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.57 KB, patch)
2023-06-22 07:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-06-20 17:48:54 PDT
Created
attachment 466770
[details]
Patch
alan
Comment 2
2023-06-22 07:17:47 PDT
Created
attachment 466796
[details]
Patch
EWS
Comment 3
2023-06-22 09:12:33 PDT
Committed
265406@main
(66f8c85cf0ab): <
https://commits.webkit.org/265406@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466796
[details]
.
Radar WebKit Bug Importer
Comment 4
2023-06-22 09:13:18 PDT
<
rdar://problem/111163856
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug