[IFC] If white-space-collapse is preserve and text-wrap is not nowrap, the UA must hang this sequence https://bugs.webkit.org/show_bug.cgi?id=258331

Reviewed by Tim Nguyen.

https://www.w3.org/TR/css-text-4/#white-space-phase-2

* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::Run::style const):
(WebCore::Layout::Line::Run::shouldTrailingWhitespaceHang const): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineCandidate::InlineContent::appendInlineItem):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::shouldTrailingWhitespaceHang):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.h:

Canonical link: https://commits.webkit.org/265406@main